projetGL/src/test/deca/context/invalid/provided/09_invalid_cast_float_to_boolean.deca
{
    float f;
    boolean b;

    f = 3.14;
    // Interdit : cast float -> boolean
    b = (boolean)(f); // Doit déclencher une erreur sémantique

    println("Ne devrait jamais s'afficher");
}
